# appraisalscribe-data-tests

./: appraisalscribe-data-tests.cabal
Tests/: Base.hs  LaTeX.hs  Main.hs  Test1.hs  Test2.hs
testdata/latexTest/638e563e-37f3-4071-9563-246bbaf0f769/: expected.ltx  expectedXeTeXStdout
testdata/latexTest/84923fa1-5ea3-47aa-ab73-d3428d98a1e2/: expected.ltx  expectedXeTeXStdout
testdata/latexTest/cb26abd0-af8d-44a1-9176-3d4d21184bcd/: expected.ltx  expectedXeTeXStdout
testdata/latexTest/f7c5f607-ffd8-48bd-bf56-79b6708bfcd6/: expected.ltx  expectedXeTeXStdout
testdata/latexTest/f9e4d387-1f31-4a76-8ec5-d5a01e195a08/: expected.aux  expected.ltx  expected.toc  expectedXeTeXStdout  rendered.aux  rendered.toc  renderedXeTeXStdout
testdata/test1/expected/: report.aux  report.log.lines  report.ltx  report.ltx.lines  report.out  report.toc
